# rxtx

./: pom.xml
rxtx-api/: pom.xml
rxtx-api/src/main/java/gnu/io/: LibraryLoader.java
rxtxSerial-java/: pom.xml
rxtxSerial-java/src/main/java/gnu/io/impl/serial/: RXTXCommDriver.java  RXTXPort.java
rxtxSerial-native/: CMakeLists.txt
rxtxSerial/src/assemble/: release.xml
